[package]
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
edition = "2021"
name = "s-plot"
version = "0.0.4"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
documentation = "https://docs.rs/printhor"
description = "A playground for motion planning"

[badges.maintenance]
status = "experimental"

[features]

default = ["native",
    "cornering",
    "assert-motion",
    "printhor-hwa-common/with-log", "with-motion", "printhor-hwa-common/with-motion"
]
# Hardware device features
without-bootloader = []
cornering = []
assert-motion = []
with-motion = []
with-x-axis = [ "printhor-hwa-common/with-x-axis", "printhor-hwi_native/with-x-axis"]
with-y-axis = [ "printhor-hwa-common/with-y-axis", "printhor-hwi_native/with-y-axis"]
with-z-axis = [ "printhor-hwa-common/with-z-axis", "printhor-hwi_native/with-z-axis"]
with-e-axis = [ "printhor-hwa-common/with-e-axis", "printhor-hwi_native/with-e-axis"]
numerical-robusticity-check = []
timing-stats = []

float-point-f32-impl = []
float-point-f64-impl = []
fixed-point-128-impl = []
plot-motion-plan = []

native = [
    "printhor-hwi_native/with-log",
    "float-point-f32-impl",
    #"float-point-f64-impl",
    #"fixed-point-128-impl",
    "with-x-axis", "with-y-axis", "with-z-axis", "with-e-axis",
    "plot-motion-plan",
]


#################
####  DEPS  #####
#################

[dependencies]

futures = { version = "0.3.30", default-features = false, features = [] }
futures-util = { version = "0.3.30", default-features = false, features = [] }
strum = { version = "0.26.1", default-features = false, features = ["derive"] }
rust_decimal = { version = "1.33.1", default-features = false, features = ["maths", "serde-with-str"] }
rust_decimal_macros = { version = "1.33.1" }
num-traits = {version = "0.2.17", default-features = false, features = [] }
micromath = { version = "2.1.0", default-features = false, features = []}

# Common base
printhor-hwa-common = { version = "0.0", default-features = false, features = [] }

# Boards
printhor-hwi_native = { version = "0.0", optional = true }

log = { version = "0.4.21", default-features = false, features = [] }
env_logger = { version = "0.11.3", default-features = false, features = [] }
gnuplot = {version = "0.0.39", default-features = false, features=[]}

embassy-futures = { version = "0", features = [] }
embassy-sync = { version = "0", features = [] }
embassy-time = { version = "0", features = [] }
critical-section = { version = "1.1.2", features = ["std"] }
embassy-executor = { version = "0", features = ["arch-std"] }
async-gcode = {version = "0.3", features = ["optional-value", "parse-checksum", "parse-comments"]}

# machinery
cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"], optional = true }
bitflags = { version = "2.4.1", default-features = false, features = [] }

cfg-if = { version = "1.0.0", features = [] }
const_env = { version = "0.1" }

[build-dependencies]
#proc-macro2 = "1.0."
cfg-if = "1.0.0"

[profile.dev]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
#opt-level = "s"
lto = true
panic = "unwind"

[profile.release]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
opt-level = "s"
lto = true
panic = "unwind"

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
debug-assertions = false
overflow-checks = false
strip = false
opt-level = "z"
lto = true
panic = "abort"

[patch.crates-io]

printhor-hwa-common = { path = "../printhor-hwa-common" }
printhor-hwi_native = { path = "../hwi-boards/printhor-hwi_native" }

#[workspace.vars]
# TBD