[package]
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
edition = "2021"
name = "s-plot"
version = "0.0.4"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
documentation = "https://docs.rs/printhor"
description = "A playground for motion planning"

[badges.maintenance]
status = "experimental"

[features]

default = ["native",
    "cornering",
    "assert-motion",
    "printhor-hwa-common/with-log", "with-motion", "printhor-hwa-common/with-motion"
]
# Hardware device features
without-bootloader = []
cornering = []
assert-motion = []
with-motion = []
with-serial-usb = []
with-serial-port-1 = []
with-serial-port-2 = []
with-fan-layer = []
with-fan-extra-1 = []
with-trinamic = []
with-laser = []
with-x-axis = [ "printhor-hwa-common/with-x-axis", "printhor-hwi_native/with-x-axis"]
with-y-axis = [ "printhor-hwa-common/with-y-axis", "printhor-hwi_native/with-y-axis"]
with-z-axis = [ "printhor-hwa-common/with-z-axis", "printhor-hwi_native/with-z-axis"]
with-e-axis = [ "printhor-hwa-common/with-e-axis", "printhor-hwi_native/with-e-axis"]
with-hot-end = []
with-hot-bed = []
with-probe = []
with-ps-on = []
with-defmt = []
grbl-compat = []
with-sdcard = []
trace-commands = []
verbose-timings = []
with-printjob = []
integration-test = []
numerical-robusticity-check = []
timing-stats = []
debug-skip-homming = []
debug-signals = []
pulsed = []
sdcard-uses-spi = []
debug-skip-homing = []
with-display = []
plot-timings = []
with-spi = []
skr_mini_e3 = []
mks_robin_nano = []
nucleo_64_arduino_cnc_hat = []
tst-rp2040 = []

float-point-f32-impl = []
float-point-f64-impl = []
fixed-point-128-impl = []
plot-motion-plan = []

native = [
    "printhor-hwi_native/with-log",
    "float-point-f32-impl",
    #"float-point-f64-impl",
    #"fixed-point-128-impl",
    "with-x-axis", "with-y-axis", "with-z-axis", "with-e-axis",
    "plot-motion-plan",
]


#################
####  DEPS  #####
#################

[dependencies]

futures = { version = "0.3.30", default-features = false, features = [] }
futures-util = { version = "0.3.30", default-features = false, features = [] }
strum = { version = "0.26.1", default-features = false, features = ["derive"] }
rust_decimal = { version = "1.35.0", default-features = false, features = ["maths", "serde-with-str"] }
rust_decimal_macros = { version = "1.35.0" }
num-traits = {version = "0.2.19", default-features = false, features = [] }
micromath = { version = "2.1.0", default-features = false, features = []}

# Common base
printhor-hwa-common = { version = "0.0.4", default-features = false, features = [] }

# Boards
printhor-hwi_native = { version = "0.0.4" }

log = { version = "0.4.22", default-features = false, features = [] }
env_logger = { version = "0.11.3", default-features = false, features = [] }
gnuplot = {version = "0.0.43", default-features = false, features=[]}

embassy-futures = { version = "0.1.1", features = [] }
embassy-sync = { version = "0.6.0", features = [] }
embassy-time = { version = "0.3.2", features = [] }
critical-section = { version = "1.1.2", features = ["std"] }
embassy-executor = { version = "0.6.0", features = [] }
async-gcode = {version = "0.3", features = ["optional-value", "parse-checksum", "parse-comments"]}

# machinery
cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"], optional = true }
bitflags = { version = "2.6.0", default-features = false, features = [] }

cfg-if = { version = "1.0.0", features = [] }
const_env = { version = "0.1" }

[build-dependencies]
#proc-macro2 = "1.0."
cfg-if = "1.0.0"

[profile.dev]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
#opt-level = "s"
lto = true
panic = "unwind"

[profile.release]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
opt-level = "s"
lto = true
panic = "unwind"

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
debug-assertions = false
overflow-checks = false
strip = false
opt-level = "z"
lto = true
panic = "abort"

[patch.crates-io]

printhor-hwa-common = { path = "../printhor-hwa-common" }
printhor-hwi_native = { path = "../hwi-boards/printhor-hwi_native" }
embassy-executor = { path = "../libs/embassy/embassy-executor" }
embassy-sync = { path = "../libs/embassy/embassy-sync" }
embassy-time = { path = "../libs/embassy/embassy-time" }
embassy-futures = { path = "../libs/embassy/embassy-futures" }
#embassy-embedded-hal = { path = "../libs/embassy/embassy-embedded-hal" }
#[workspace.vars]
# TBD