[package]
name = "printhor-hwi_mks_robin_nano"
version = "0.0.4"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction for MKS Robin Nano v3.1 board"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
keywords = ["hardware", "abstraction"]
license = "MIT"
documentation = "https://docs.rs/prinThor"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
# Hardware device features
with-serial-usb = ["embassy-usb"]
with-serial-port-1 = []
with-serial-port-2 = []
with-print-job = []
with-spi = ["embedded-hal"]
with-hot-end = ["embedded-hal"]
with-hot-bed = ["embedded-hal"]
with-motion = []
with-probe = ["embedded-hal"]
with-endstops = []
with-sd-card = []
with-fan-layer = ["embedded-hal"]
with-laser = ["embedded-hal"]
with-defmt = ["printhor-hwa-common/with-defmt"]
with-trinamic = []
with-ps-on = []
with-x-axis = []
with-y-axis = []
with-z-axis = []
with-e-axis = []
with-a-axis = []
with-b-axis = []
with-c-axis = []
with-i-axis = []
with-j-axis = []
with-k-axis = []
with-u-axis = []
with-v-axis = []
with-w-axis = []

nightly = []
cooperative = ["embassy-time/generic-queue-128"]
without-ringbuffer = []
verbose-timings = []
upstream-embassy = []
sd-card-uses-spi = []
without-bootloader = []


[dependencies]
defmt = {version = "0.3", default-features = false}
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", default-features = false }
alloc-cortex-m = { version = "0.4.4", default-features = false, features = []}

embassy-stm32 = { version = "0.2", default-features = false, features = ["stm32f407ve", "defmt", "rt", "memory-x", "exti", "unstable-pac", "time-driver-tim4"] }
embassy-executor = { version = "0.7", default-features = false, features = ["executor-thread", "arch-cortex-m", "task-arena-size-16384"] }
embassy-sync = { version = "0.6", features = [] }
embassy-time = { version = "0.4", features = ["tick-hz-1_000_000"] }
embassy-futures = { version = "0.1", features = [] }
embassy-usb = { version = "0.3", features = [], optional = true }

printhor-hwa-common = { version = "0.0"}
async-gcode = {version = "0", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value"] }
futures = { version = "0.3.30", default-features = false, features = [] }
embedded-hal = { version = "1.0.0", default-features = false, optional = true }
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven", ] }

cfg-if = {version = "1.0.0"}
const_env = { version = "0.1" }

[patch.crates-io]
async-gcode = { path = "../../libs/async-gcode" }
